--- a/css/styles.sass
+++ b/css/styles.sass
@@ -3,6 +3,10 @@
 
 @charset "UTF-8"
 
+$color-main: #FEB13F
+$color-active: #FFF
+$color-link: #FFF
+
 input, textarea
   -webkit-appearance: none
   -webkit-border-radius: 0px
@@ -27,13 +31,21 @@ html
   background-position: center
   background-repeat: no-repeat
   background-size: cover
-
+p, ol li
+  max-width: calc(250px + 100vw - 1024px)
+  margin-left: auto
+  margin-right: auto
+ol li
+  margin-bottom: 10px
+@media (max-width: 480px)
+  p, ol li
+    max-width: 90vw
 .logo 
   font-size: 5em
   margin-bottom: 0
 
 .tagline 
-  margin: 2em
+  margin: 2em auto
   font-size: 2em
 
 .callToAction
@@ -80,58 +92,186 @@ a, a:visited
 #mc-embedded-subscribe 
   border-bottom-right-radius: 10px
   border-top-right-radius: 10px
-  background-color: #03a9f4
+  background-color: $color-main
   color: #FFF
   height: 48px
 
-@media screen and (max-width: 420px) 
-  body
-    font-size: 10px
+$button-height: 27px
+$button-width: 35px
 
+header
+  background-color: $color-main
 
-header 
-  color: white
-  background-color: #FEB13F
-  margin: 0
-  padding-left: 20px
-  height: 80px
-  display: flex
-  flex-flow: row
-  border-bottom: white 1px solid
-  font-weight: bold
+.container
+  position: absolute
+  width: 100%
+  height: 100%
+  text-align: center
+  top: 40%
+  left: 0
+  margin: 0 auto
+  font-family: 'Varela Round', sans-serif
 
-header li 
-  list-style: none
-  display: inline-block
-  margin: auto 15px
-  font-size: 1.1em
-  text-decoration: underline
+  p
+    font-size: 20px
 
-nav 
-  margin: auto 0
-
-
-@media screen and (max-width: 600px) 
-  .topnav a:not(:first-child)
-    display: none
-
-.topnav a.icon 
-  float: right
-  display: block
-
-
-@media screen and (max-width: 600px) 
-  .topnav.responsive 
+  a
+    display: inline-block
     position: relative
-  
-  .topnav.responsive a.icon 
-    position: absolute
-    right: 0
-    top: 0
-  
-  .topnav.responsive a 
-    float: none
-    display: block
-    text-align: left
-  
+    text-align: center
+    color: $color-main
+    text-decoration: none
+    font-size: 20px
+    overflow: hidden
+    top: 5px
 
+    &:after
+      content: ''
+      position: absolute
+      background: $color-main
+      height: 2px
+      width: 0%
+      transform: translateX(-50%)
+      left: 50%
+      bottom: 0
+      transition: .35s ease
+
+    &:hover:after,
+    &:focus:after,
+    &:active:after
+      width: 100%
+
+h1
+  position: relative
+  text-align: center
+  font-family: 'Varela Round', serif
+
+.button_container
+  position: fixed
+  top: 25px
+  right: 15px
+  height: $button-height
+  width: $button-width
+  cursor: pointer
+  z-index: 100
+  transition: opacity .25s ease
+
+  &:hover
+    opacity: .7
+
+  &.active
+    .top
+      transform: translateY(11px) translateX(0) rotate(45deg)
+      background: $color-link
+
+    .middle
+      opacity: 0
+      background: $color-link
+
+    .bottom
+      transform: translateY(-11px) translateX(0) rotate(-45deg)
+      background: $color-link
+
+  span
+    background: $color-link
+    border: none
+    height: 5px
+    width: 100%
+    position: absolute
+    top: 0
+    left: 0
+    transition: all .35s ease
+    cursor: pointer
+
+    &:nth-of-type(2)
+      top: 11px
+
+    &:nth-of-type(3)
+      top: 22px
+
+.overlay
+  position: fixed
+  background: $color-main
+  top: 0
+  left: 0
+  width: 100%
+  height: 0%
+  opacity: 0
+  visibility: hidden
+  transition: opacity .35s, visibility .35s, height .35s
+  overflow: hidden
+
+  &.open
+    opacity: .9
+    visibility: visible
+    height: 100%
+
+    li
+      animation: fadeInRight .5s ease forwards
+      animation-delay: .35s
+
+      &:nth-of-type(2)
+        animation-delay: .4s
+
+      &:nth-of-type(3)
+        animation-delay: .45s
+
+      &:nth-of-type(4)
+        animation-delay: .50s
+
+  nav
+    position: relative
+    height: 70%
+    top: 50%
+    transform: translateY(-50%)
+    font-size: 50px
+    font-family: 'Varela Round', serif
+    font-weight: 400
+    text-align: center
+
+  ul
+    list-style: none
+    padding: 0
+    margin: 0 auto
+    display: inline-block
+    position: relative
+    height: 100%
+
+    li
+      display: block
+      height: calc(100% / 4)
+      min-height: 50px
+      position: relative
+      opacity: 0
+
+      a
+        display: block
+        position: relative
+        color: $color-link
+        text-decoration: none
+        overflow: hidden
+
+        &:hover:after,
+        &:focus:after,
+        &:active:after
+          width: 100%
+
+        &:after
+          content: ''
+          position: absolute
+          bottom: 0
+          left: 50%
+          width: 0%
+          transform: translateX(-50%)
+          height: 3px
+          background: $color-link
+          transition: .35s
+
+@keyframes fadeInRight
+  0%
+    opacity: 0
+    left: 20%
+
+  100%
+    opacity: 1
+    left: 0
