Add style fixes

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -22,6 +22,7 @@ html, body
 html 
   /* The image used */
   background-image: url("/assets/water-background-dark.png")
+  background-attachment: fixed;
 
 
   /* Full height */
@@ -32,7 +33,7 @@ html
   background-repeat: no-repeat
   background-size: cover
 p, ol li
-  max-width: calc(250px + 100vw - 1024px)
+  max-width: 80vw
   margin-left: auto
   margin-right: auto
 ol li
@@ -53,19 +54,19 @@ ol li
   display: flex
   justify-content: center
 
-/*.button */
-/*    margin: 1rem*/
-/*    border: #ffffff 2px solid*/
-/*    border-radius: 50px*/
-/*    width: 10rem*/
-/*    height: 3rem*/
-/*    line-height: 3rem*/
-/*    font-size: 1.3rem*/
-/**/
-/*.button-primary */
-/*    background-color: #03a9f4*/
-/*    border-color: #03a9f4*/
-/**/
+.button
+  margin: 1rem
+  border: #ffffff 2px solid
+  border-radius: 50px
+  width: 10rem
+  height: 3rem
+  line-height: 3rem
+  font-size: 1.3rem
+
+.button-primary
+  background-color: $color-main
+  border-color: $color-main
+
 a, a:visited 
   text-decoration: none
   color: white
