Set ticket sale live (#1)
* make index a go to start page

* Make the interface more responsive

* Fixes

* Fixes

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -41,6 +41,7 @@ ol li
 @media (max-width: 480px)
   p, ol li
     max-width: 90vw
+    margin: 10px
 .logo 
   font-size: 5em
   margin-bottom: 0
@@ -276,3 +277,7 @@ h1
   100%
     opacity: 1
     left: 0
+
+@media screen and (max-width: 420px)
+  html
+    font-size: 12px
