--- a/theme/_layouts/default.html
+++ b/theme/_layouts/default.html
@@ -7,6 +7,7 @@ layout: compress
 <head>
     <title>Caferace - {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content= "De Caférace is een studenten zeilwedstrijd waarbij er gevaren wordt van kroeg naar kroeg. Het doel? Zoveel mogelijk punten verzamelen door kroegen af te gaan." />
     <link href="https://fonts.googleapis.com/css?family=Lato:900|Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <script>
