optimize image and background

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -19,9 +19,10 @@ html, body
   padding: 0
   margin: 0
 
-html 
+html
+  background-color: #63666c;
   /* The image used */
-  background-image: url("/assets/water-background-dark.png")
+  background-image: url("/assets/water-background-dark-min.png")
   background-attachment: fixed;
 
 
