--- a/css/styles.sass
+++ b/css/styles.sass
@@ -7,14 +7,18 @@ $color-main: #FEB13F
 $color-active: #FFF
 $color-link: #FFF
 
+@font-face
+  font-family: 'Varela Round';
+  src: url("/assets/Varela_Round/VarelaRound-Regular.ttf");
+
 input, textarea
   -webkit-appearance: none
-  -webkit-border-radius: 0px
+  -webkit-border-radius: 0
 
 html, body 
   color: #ffffff
   text-align: center
-  font-family: 'Lato', sans-serif
+  font-family: "Verdana", Helvetica, sans-serif
   overflow: no-content
   padding: 0
   margin: 0
@@ -24,8 +28,6 @@ html
   /* The image used */
   background-image: url("/assets/water-background-dark-min.png")
   background-attachment: fixed;
-
-
   /* Full height */
   height: 100%
 
@@ -45,6 +47,7 @@ ol li
     margin: 10px
 .logo 
   font-size: 5em
+  font-family: 'Varela Round', serif
   margin-bottom: 0
 
 .tagline 
