Remove unneeded import

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -10,6 +10,7 @@ $color-link: #FFF
 @font-face
   font-family: 'Varela Round';
   src: url("/assets/Varela_Round/VarelaRound-Regular.ttf");
+  font-display: swap
 
 input, textarea
   -webkit-appearance: none
