--- a/theme/_layouts/default.html
+++ b/theme/_layouts/default.html
@@ -8,9 +8,8 @@ layout: compress
     <title>Caferace - {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content= "De Caférace is een studenten zeilwedstrijd waarbij er gevaren wordt van kroeg naar kroeg. Het doel? Zoveel mogelijk punten verzamelen door kroegen af te gaan." />
-    <link href="https://fonts.googleapis.com/css?Varela+Round&swap=true" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css?v={{ site.time | date:'%s' }}">
-    <script>
+    <script type="application/javascript">
         function doOnLoad() {
             document.getElementById("toggle").onclick = function () {
                 const overlay = document.getElementById("overlay");
